force-app/main/default/objects/OEM_Entropy_Snapshot__c/OEM_Entropy_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Entropy Snapshot</label>
    <pluralLabel>Entropy Snapshots</pluralLabel>
    <nameField><label>Snapshot Name</label><type>Text</type></nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>