force-app/main/default/objects/OEM_Entropy_Snapshot__c/fields/AutomationSprawl__c.field-meta.xml
<CustomField>
    <fullName>AutomationSprawl__c</fullName>
    <label>Automation Sprawl</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>