force-app/main/default/objects/OEM_Entropy_Snapshot__c/fields/ChangeVelocity__c.field-meta.xml
<CustomField>
    <fullName>ChangeVelocity__c</fullName>
    <label>Change Velocity</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>