force-app/main/default/objects/OEM_Entropy_Snapshot__c/fields/Duplication__c.field-meta.xml
<CustomField>
    <fullName>Duplication__c</fullName>
    <label>Duplication Signals</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>