force-app/main/default/objects/OEM_Entropy_Snapshot__c/fields/EntropyIndex__c.field-meta.xml
<CustomField>
    <fullName>EntropyIndex__c</fullName>
    <label>Entropy Index</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>