force-app/main/default/objects/OEM_Entropy_Snapshot__c/fields/Hotspots__c.field-meta.xml
<CustomField>
    <fullName>Hotspots__c</fullName>
    <label>Hotspots</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>