force-app/main/default/objects/OEM_Entropy_Snapshot__c/fields/IsSandbox__c.field-meta.xml
<CustomField>
    <fullName>IsSandbox__c</fullName>
    <label>Is Sandbox</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>