force-app/main/default/objects/OEM_Entropy_Snapshot__c/fields/MeasuresAvailable__c.field-meta.xml
<CustomField>
    <fullName>MeasuresAvailable__c</fullName>
    <label>Measures Available</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>