force-app/main/default/objects/OEM_Entropy_Snapshot__c/fields/MeasuresTotal__c.field-meta.xml
<CustomField>
    <fullName>MeasuresTotal__c</fullName>
    <label>Measures Total</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>