force-app/main/default/objects/OEM_Entropy_Snapshot__c/fields/PermissionSprawl__c.field-meta.xml
<CustomField>
    <fullName>PermissionSprawl__c</fullName>
    <label>Permission Sprawl</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>