force-app/main/default/objects/OEM_Entropy_Snapshot__c/fields/SnapshotDate__c.field-meta.xml
<CustomField>
    <fullName>SnapshotDate__c</fullName>
    <label>Snapshot Date</label>
    <type>DateTime</type>
    <required>true</required>
</CustomField>