force-app/main/default/objects/OEM_Entropy_Snapshot__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Running</fullName><default>false</default><label>Running</label></value>
            <value><fullName>Completed</fullName><default>true</default><label>Completed</label></value>
            <value><fullName>Partial</fullName><default>false</default><label>Partial</label></value>
            <value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>